[gd_scene load_steps=7 format=2]

[ext_resource path="res://Recursos/movement.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Jugador/Rey_p1.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Fuentes/Masaaki-Regular.otf" type="DynamicFontData" id=3]

[sub_resource type="CapsuleShape2D" id=1]
height = 7.97741

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 3 )

[sub_resource type="CircleShape2D" id=3]
radius = 28.8497

[node name="KinematicBody2D" type="KinematicBody2D"]
pause_mode = 1
collision_mask = 119
script = ExtResource( 2 )
vidas = 3

[node name="movement" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "joy"
frame = 4
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.972, 1.52 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 15.0

[node name="Label" type="Label" parent="Camera2D"]
margin_left = -241.329
margin_top = -141.43
margin_right = -182.329
margin_bottom = -121.43
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.698039, 0.0784314, 0.0784314, 1 )
text = "VIDAS x3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ataque" type="Area2D" parent="."]
input_pickable = false
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ataque"]
position = Vector2( 10.119, 0 )
shape = SubResource( 3 )
disabled = true

[node name="tiempo_de_ataque" type="Timer" parent="."]
[connection signal="attack" from="." to="." method="_on_KinematicBody2D_attack"]
[connection signal="animation_finished" from="movement" to="." method="_on_movement_animation_finished"]
[connection signal="body_entered" from="ataque" to="." method="_on_ataque_body_entered"]
[connection signal="timeout" from="tiempo_de_ataque" to="." method="_on_tiempo_de_ataque_timeout"]
